--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
@@ -9,6 +9,8 @@ unlisted: true
 
 Salut à tous !
 
+promote confs!
+
 <Todo />
 
 <!-- truncate -->
@@ -41,7 +43,83 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Breaking React Query's API on purpose](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)
+
+https://twitter.com/TkDodo/status/1647590993577771008
+
+---
+
+[An Animated Guide to Reacts Optional Parameters](https://julesblom.com/writing/react-optional-parameters)
+
+https://twitter.com/Mega_Jules/status/1648000598237642754
+
+---
+
+https://twitter.com/jaffathecake/status/1646798390355697664
+https://twitter.com/sebastienlorber/status/1647997515906572291
+
+---
+
+[Animating View Transitions](https://www.patterns.dev/posts/view-transitions)
+
+https://www.linkedin.com/feed/update/urn:li:activity:7052770397716447232/
+
+---
+
+- https://twitter.com/dan_abramov/status/1647203329854799872
+- https://twitter.com/dan_abramov/status/1647199338177732608
+- https://twitter.com/dan_abramov/status/1645490472545050626
+- https://twitter.com/trueadm/status/1648105069433298944
+
+---
+
+RFC: Consult new JSX.ElementType for valid JSX element types #51328
+
+- https://github.com/microsoft/TypeScript/pull/51328
+- https://twitter.com/dan_abramov/status/1647197108640923649
+- https://twitter.com/heyImMapleLeaf/status/1646936390733557760
+- https://twitter.com/cramforce/status/1647074779919429634
+- https://gist.github.com/cramforce/b5e3f0b103f841d2e5e429b1d5ac4ded
+- https://www.reddit.com/r/reactjs/comments/12n0t4b/typescript_pr_merged_to_allow_components_to/
+
+---
+
+https://twitter.com/aidenybai/status/1647005716350406656
+https://twitter.com/aidenybai/status/1646238355427041285
+
+---
+
+https://twitter.com/dan_abramov/status/1646180777221054464
+
+---
+
+https://twitter.com/acdlite/status/1648001479226040320
+
+---
+
+- ["Did you know that Next.js ships its own copy of React"](https://twitter.com/devongovett/status/1647728887927906304)
+- [Becoming an Astro maintainer](https://www.elian.codes/blog/23-04-12-becoming-an-astro-maintainer/)
+- [Next over Remix](https://bradgarropy.com/blog/next-over-remix): petit retour d'expérience d'un dev qui avait prévu de passer sous Remix mais finalement reste sous Next.js.
+- [OpenNext 1.0](https://github.com/serverless-stack/open-next/releases/tag/v1.0.0): accompagné d'un super [trailer](https://www.youtube.com/watch?v=k_8lBdPC3gk) 😄 + https://twitter.com/ascorbic/status/1647933554372800514
+- [React forwardRef(): How to Pass Refs to Child Components](https://dmitripavlutin.com/react-forwardref/)
+- [Is React the New WordPress?](https://www.seancdavis.com/posts/is-react-the-new-wordpress/)
+- [Dan Abramov has a "story to tell" at Remix Conf ("React from Another Dimension")](https://twitter.com/remix_run/status/1646177445454950400)
+- [SpiderMonkey Newsletter (Firefox 112-113)](https://spidermonkey.dev/blog/2023/04/14/newsletter-firefox-112-113.html): "We’re working on improving performance for popular web frameworks such as React".
+- [Display Warning for Unsaved Form Data on Page Exit](https://claritydev.net/blog/display-warning-for-unsaved-form-data-on-page-exit)
+- [Mastering React: Techniques to Take Your UI to the Next Level](https://blog.bitsrc.io/mastering-react-techniques-to-take-your-ui-to-the-next-level-a5002173904f)
+- [Use Storybook with Rspack](https://twitter.com/rspack_dev/status/1646164228598792196)
+- [What's new in the new Storybook](https://www.mariasimo.codes/storybook-7-new-release) + https://twitter.com/storybookjs/status/1646966773407797264
+- [Ariakit 0.1.0](https://github.com/ariakit/ariakit/releases/tag/%40ariakit%2Freact%400.1.0): nouvelle manière de gérée l'état basée sur des "component stores". Motivations détaillées dans cette [RFC](https://github.com/ariakit/ariakit/issues/1875): moins de re-renders, framework-agnostic...
+- [Astro 2.3](https://twitter.com/ElianCodes/status/1646784625254047744)
+- [Building a blog with Next.js 13 and React Server Components](https://maxleiter.com/blog/build-a-blog-with-nextjs-13)
+- [Maybe Create React App Isn't Dead?](https://www.youtube.com/watch?v=A2kWoKnpy1U)
+- [Enhanced Hybrid Next.js Support in Azure Static Web Apps](https://www.youtube.com/watch?v=68CFn-EkkNM)
+- [Building an iOS Animated Toggle with React Aria Components and Tailwind CSS](https://www.youtube.com/watch?v=T-pr-rZgMlQ)
+- [Astro 2.3](https://twitter.com/astrodotbuild/status/1646593124997779465)
+- [React-Three-Next - starter updated - App Router support](https://twitter.com/onirenaud/status/1646139899291254786)
+- [React-Three-Fiber AutoFocus DOF](https://github.com/ektogamat/AutoFocusDOF)
+- [WebGPU in React-Three-Fiber demo](https://twitter.com/CantBeFaraz/status/1647811509014216710)
+- [Must Know React Portability Patterns](https://www.youtube.com/watch?v=yi8UCnXPu8U): de bons conseils pour moins coupler son code à un framework particulier.
 
 <SubscribeFormEmbed />
 
@@ -68,12 +146,19 @@ Or run  `npx create-tina-app@latest`  then visit `localhost:3000/admin`
 
 Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
-
 ---
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [Expo-Image 1.2.0 - ThumbHash support](https://twitter.com/tsapeta/status/1646875246362861569)
+- https://twitter.com/amanhimself/status/1646959895995105281
+- https://twitter.com/jamonholmgren/status/1646889008612642817
+- https://twitter.com/jamonholmgren/status/1647305506053320704
+- https://twitter.com/jamonholmgren/status/1648054996259471360
+- https://twitter.com/mironcatalin/status/1646422541328629761
+- https://twitter.com/nightstomp/status/1647231665222176769
+- https://twitter.com/breskin67/status/1646511002933153794
+- [Song of Bloom - “Can it be done in React Native?”](https://www.youtube.com/watch?v=PfCQEA72ljU)
 
 ---
 
@@ -95,7 +180,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Comment configurer ReactJS Vite Tailwind Styled components](https://dev.to/vincent_react/comment-configurer-reactjs-vite-tailwind-styled-components-1m72)
+- [Comment React préserve ton State ?](https://www.youtube.com/watch?v=10YNSQ1AfYw)
+- [Streaming sur AWS Lambda - Actus JS de la semaine](https://www.youtube.com/watch?v=FPCka_vpiKs)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -105,13 +192,21 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Node.js 20 Now Available](https://openjsf.org/blog/2023/04/18/node-js-20-now-available/)
+- [Node v18.16.0](https://nodejs.org/en/blog/release/v18.16.0)
+- [WebGPU Fundamentals](https://webgpufundamentals.org/)
+- [pretty-ts-errors](https://github.com/yoavbls/pretty-ts-errors)
+- [total-typescript/shoehorn - Partial mocks in TypeScript](https://github.com/total-typescript/shoehorn)
+- [Turborepo 1.9](https://twitter.com/turborepo/status/1646238976196444162)
+- [Testing with TypeScript is Painful: Here's a Solution](https://www.totaltypescript.com/testing-with-typescript-is-painful-heres-a-solution)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/fireship_dev/status/1647239204303409157
+
+https://twitter.com/thekitze/status/1646511070801203202
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
