--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
@@ -43,83 +43,52 @@ Testez le dès maintenant en moins de 30 minutes !
 
 ## ⚛️ React {#react}
 
-[Breaking React Query's API on purpose](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)
+[![TypeScript 5.1 beta](/emails/issues/142/ts5.1.jpg)](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-beta/)
 
-https://twitter.com/TkDodo/status/1647590993577771008
+**[TypeScript 5.1 beta](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-beta/)**
 
----
+Une version TypeScript importante qui va permettre à React de pouvoir déclarer les types valides à utiliser dans le JSX. Il est prévu d'utiliser cette nouvelle feature au plus tôt dans les typedefs React, qui ont d'ailleurs été [forkées](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/65126) pour continuer à supporter des anciennes versions (TypeScript <= 5.0).
 
-[An Animated Guide to Reacts Optional Parameters](https://julesblom.com/writing/react-optional-parameters)
+Il y a de bonnes raisons d'adopter TypeScript 5.1+ au plus vite, car cela débloque entre autre:
 
-https://twitter.com/Mega_Jules/status/1648000598237642754
-
----
-
-https://twitter.com/jaffathecake/status/1646798390355697664
-https://twitter.com/sebastienlorber/status/1647997515906572291
+- la possibilité d'utiliser un React Server Component `async` dans le JSX sans erreurs TypeScript ni [workaround](https://gist.github.com/cramforce/b5e3f0b103f841d2e5e429b1d5ac4ded).
+- la possibilité de retourner tous les types valides pour `ReactNode` (string, array, boolean...) sans avoir besoin d'un fragment ([details](https://twitter.com/sebastienlorber/status/1648619398259769344)).
 
 ---
 
-[Animating View Transitions](https://www.patterns.dev/posts/view-transitions)
+[![Breaking React Query's API on purpose](/emails/issues/142/rq.jpg)](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)
 
-https://www.linkedin.com/feed/update/urn:li:activity:7052770397716447232/
+**[Breaking React Query's API on purpose](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)**
 
----
-
-- https://twitter.com/dan_abramov/status/1647203329854799872
-- https://twitter.com/dan_abramov/status/1647199338177732608
-- https://twitter.com/dan_abramov/status/1645490472545050626
-- https://twitter.com/trueadm/status/1648105069433298944
+React-Query va retirer les callbacks (`onSucces`, `onErro`, `onSettled`) du hook `useQuery` avec la v5. Dominik explique ce choix en proposant des alternatives plus adaptées pour les cas communs, comme afficher un toast. Une décision qui fait polémique, mais semble nécessaire car ces APIs étaient souvent mal utilisées. Note: les callbacks sont conservées pour `useMutation`.
 
 ---
 
-RFC: Consult new JSX.ElementType for valid JSX element types #51328
-
-- https://github.com/microsoft/TypeScript/pull/51328
-- https://twitter.com/dan_abramov/status/1647197108640923649
-- https://twitter.com/heyImMapleLeaf/status/1646936390733557760
-- https://twitter.com/cramforce/status/1647074779919429634
-- https://gist.github.com/cramforce/b5e3f0b103f841d2e5e429b1d5ac4ded
-- https://www.reddit.com/r/reactjs/comments/12n0t4b/typescript_pr_merged_to_allow_components_to/
-
----
-
-https://twitter.com/aidenybai/status/1647005716350406656
-https://twitter.com/aidenybai/status/1646238355427041285
-
----
-
-https://twitter.com/dan_abramov/status/1646180777221054464
-
----
-
-https://twitter.com/acdlite/status/1648001479226040320
-
----
-
-- ["Did you know that Next.js ships its own copy of React"](https://twitter.com/devongovett/status/1647728887927906304)
-- [Becoming an Astro maintainer](https://www.elian.codes/blog/23-04-12-becoming-an-astro-maintainer/)
-- [Next over Remix](https://bradgarropy.com/blog/next-over-remix): petit retour d'expérience d'un dev qui avait prévu de passer sous Remix mais finalement reste sous Next.js.
-- [OpenNext 1.0](https://github.com/serverless-stack/open-next/releases/tag/v1.0.0): accompagné d'un super [trailer](https://www.youtube.com/watch?v=k_8lBdPC3gk) 😄 + https://twitter.com/ascorbic/status/1647933554372800514
-- [React forwardRef(): How to Pass Refs to Child Components](https://dmitripavlutin.com/react-forwardref/)
-- [Is React the New WordPress?](https://www.seancdavis.com/posts/is-react-the-new-wordpress/)
-- [Dan Abramov has a "story to tell" at Remix Conf ("React from Another Dimension")](https://twitter.com/remix_run/status/1646177445454950400)
-- [SpiderMonkey Newsletter (Firefox 112-113)](https://spidermonkey.dev/blog/2023/04/14/newsletter-firefox-112-113.html): "We’re working on improving performance for popular web frameworks such as React".
-- [Display Warning for Unsaved Form Data on Page Exit](https://claritydev.net/blog/display-warning-for-unsaved-form-data-on-page-exit)
-- [Mastering React: Techniques to Take Your UI to the Next Level](https://blog.bitsrc.io/mastering-react-techniques-to-take-your-ui-to-the-next-level-a5002173904f)
-- [Use Storybook with Rspack](https://twitter.com/rspack_dev/status/1646164228598792196)
-- [What's new in the new Storybook](https://www.mariasimo.codes/storybook-7-new-release) + https://twitter.com/storybookjs/status/1646966773407797264
-- [Ariakit 0.1.0](https://github.com/ariakit/ariakit/releases/tag/%40ariakit%2Freact%400.1.0): nouvelle manière de gérée l'état basée sur des "component stores". Motivations détaillées dans cette [RFC](https://github.com/ariakit/ariakit/issues/1875): moins de re-renders, framework-agnostic...
-- [Astro 2.3](https://twitter.com/ElianCodes/status/1646784625254047744)
-- [Building a blog with Next.js 13 and React Server Components](https://maxleiter.com/blog/build-a-blog-with-nextjs-13)
-- [Maybe Create React App Isn't Dead?](https://www.youtube.com/watch?v=A2kWoKnpy1U)
-- [Enhanced Hybrid Next.js Support in Azure Static Web Apps](https://www.youtube.com/watch?v=68CFn-EkkNM)
-- [Building an iOS Animated Toggle with React Aria Components and Tailwind CSS](https://www.youtube.com/watch?v=T-pr-rZgMlQ)
-- [Astro 2.3](https://twitter.com/astrodotbuild/status/1646593124997779465)
-- [React-Three-Next - starter updated - App Router support](https://twitter.com/onirenaud/status/1646139899291254786)
-- [React-Three-Fiber AutoFocus DOF](https://github.com/ektogamat/AutoFocusDOF)
-- [WebGPU in React-Three-Fiber demo](https://twitter.com/CantBeFaraz/status/1647811509014216710)
-- [Must Know React Portability Patterns](https://www.youtube.com/watch?v=yi8UCnXPu8U): de bons conseils pour moins coupler son code à un framework particulier.
+- 🧵 [Dan Abramov - "good rule of thumb. for any “server components”](https://twitter.com/dan_abramov/status/1647203329854799872): explique le minimum requis pour une bonne implémentation des Server Components et profiter pleinement de leur potentiel. Présente les limites de Qwik et Remix.
+- 👀 [Dan Abramov has a "story to tell" at Remix Conf ("React from Another Dimension")](https://twitter.com/remix_run/status/1646177445454950400)
+- 👀 [Next.js ships its own copy of React](https://twitter.com/devongovett/status/1647728887927906304): copie utilisée seulement quand vous utilisez App Router.
+- 👀 [Use Storybook with Rspack](https://twitter.com/rspack_dev/status/1646164228598792196)
+- 👀 [WebGPU in React-Three-Fiber demo](https://twitter.com/CantBeFaraz/status/1647811509014216710)
+- ⚡ [SpiderMonkey Newsletter (Firefox 112-113)](https://spidermonkey.dev/blog/2023/04/14/newsletter-firefox-112-113.html): "We’re working on improving performance for popular web frameworks such as React".
+- 📜 [Animating View Transitions](https://www.patterns.dev/posts/view-transitions): propose d'utiliser la nouvelle API View Transition (disponible dans Chrome 111) dans un contexte React avec Next.js App Router, et dans un contexte MPA. Intéressant, mais je pense que l'intégration React proposée n'est pas idéale.
+- 📜 [An Animated Guide to Reacts Optional Parameters](https://julesblom.com/writing/react-optional-parameters): article interactif qui présente quelques fonctions des APIs React qu'on utilise moins souvent.
+- 📜 [Next over Remix](https://bradgarropy.com/blog/next-over-remix): retour d'expérience d'un dev qui avait prévu de passer sous Remix, mais qui finalement reste sous Next.js.
+- 📜 [Building a blog with Next.js 13 and React Server Components](https://maxleiter.com/blog/build-a-blog-with-nextjs-13): utilise toutes les dernières nouveautés Next.js pour créer un blog moderne.
+- 📜 [React forwardRef(): How to Pass Refs to Child Components](https://dmitripavlutin.com/react-forwardref/)
+- 📜 [Is React the New WordPress?](https://www.seancdavis.com/posts/is-react-the-new-wordpress/)
+- 📜 [Becoming an Astro maintainer](https://www.elian.codes/blog/23-04-12-becoming-an-astro-maintainer/)
+- 📜 [Display Warning for Unsaved Form Data on Page Exit](https://claritydev.net/blog/display-warning-for-unsaved-form-data-on-page-exit)
+- 📜 [Mastering React: Techniques to Take Your UI to the Next Level](https://blog.bitsrc.io/mastering-react-techniques-to-take-your-ui-to-the-next-level-a5002173904f)
+- 📜 [What's new in the new Storybook](https://www.mariasimo.codes/storybook-7-new-release)
+- 📜 [Full-stack Web Apps Without React](https://remotesynthesis.com/blog/full-stack-without-react/)
+- 🎥 [Must Know React Portability Patterns](https://www.youtube.com/watch?v=yi8UCnXPu8U): de bons conseils pour moins coupler son code à un framework particulier.
+- 🎥 [Maybe Create React App Isn't Dead?](https://www.youtube.com/watch?v=A2kWoKnpy1U)
+- 📦 [Ariakit 0.1.0](https://github.com/ariakit/ariakit/releases/tag/%40ariakit%2Freact%400.1.0): nouvelle manière de gérée l'état basée sur des "component stores". Motivations détaillées dans cette [RFC](https://github.com/ariakit/ariakit/issues/1875): moins de re-renders, framework-agnostic...
+- 📦 [Million.js 2.2.1 - Support for hooks and non-primitives](https://twitter.com/aidenybai/status/1646238355427041285). Ce [thread](https://twitter.com/aidenybai/status/1647005716350406656) donne des explications intéressante sur la différence entre la reconciliation React et Million.
+- 📦 [OpenNext 1.0](https://github.com/serverless-stack/open-next/releases/tag/v1.0.0): souhaite rendre Next.js plus portable avec un serverless adapter.
+- 📦 [Astro 2.3](https://twitter.com/astrodotbuild/status/1646593124997779465)
+- 📦 [React-Three-Next - starter updated - App Router support](https://twitter.com/onirenaud/status/1646139899291254786)
+- 📦 [React-Three-Fiber AutoFocus DOF](https://github.com/ektogamat/AutoFocusDOF)
 
 <SubscribeFormEmbed />
 
@@ -150,15 +119,17 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## 📱 React-Native {#react-native}
 
-- [Expo-Image 1.2.0 - ThumbHash support](https://twitter.com/tsapeta/status/1646875246362861569)
-- https://twitter.com/amanhimself/status/1646959895995105281
-- https://twitter.com/jamonholmgren/status/1646889008612642817
-- https://twitter.com/jamonholmgren/status/1647305506053320704
-- https://twitter.com/jamonholmgren/status/1648054996259471360
-- https://twitter.com/mironcatalin/status/1646422541328629761
-- https://twitter.com/nightstomp/status/1647231665222176769
-- https://twitter.com/breskin67/status/1646511002933153794
-- [Song of Bloom - “Can it be done in React Native?”](https://www.youtube.com/watch?v=PfCQEA72ljU)
+- 👀 [Hover gesture coming soon to React Native Gesture Handler](https://twitter.com/breskin67/status/1646511002933153794): future API cross-platform avec support iOS, Android et web.
+- 👀 [Image perf demo](https://twitter.com/nightstomp/status/1647231665222176769): montre bien l'impact d'utiliser des imaages bien resizées sur vos apps React-Native.
+- 📦 [Expo-Image 1.2.0 - ThumbHash support](https://twitter.com/tsapeta/status/1646875246362861569)
+- 📦 [React-Native-Widget-Extension](https://twitter.com/bndkt/status/1648431242025766912)
+- 📦 [AnimateReactNative](https://www.animatereactnative.com/): plus de 100 animations par Catalin Miron (produit payant).
+- 🧵 [Expo Docs Updates](https://twitter.com/amanhimself/status/1646959895995105281)
+- 🧵 [Jamon Holmgren - "Want to know how easy it is to grab API keys out of a compiled iPhone app?"](https://twitter.com/jamonholmgren/status/1647305506053320704)
+- 🎥 [Song of Bloom - “Can it be done in React Native?”](https://www.youtube.com/watch?v=PfCQEA72ljU)
+- 🎥 [React Native File Based Routing with Expo Router](https://www.youtube.com/watch?v=RglRiycD0oQ)
+- 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, 18-19 Mai) nous offre -10% sur les entrées (code "thisweekinreact").
 
 ---
 
@@ -180,9 +151,9 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Comment configurer ReactJS Vite Tailwind Styled components](https://dev.to/vincent_react/comment-configurer-reactjs-vite-tailwind-styled-components-1m72)
-- [Comment React préserve ton State ?](https://www.youtube.com/watch?v=10YNSQ1AfYw)
-- [Streaming sur AWS Lambda - Actus JS de la semaine](https://www.youtube.com/watch?v=FPCka_vpiKs)
+- 📜 [Comment configurer ReactJS Vite Tailwind Styled components](https://dev.to/vincent_react/comment-configurer-reactjs-vite-tailwind-styled-components-1m72)
+- 🎥 [Comment React préserve ton State ?](https://www.youtube.com/watch?v=10YNSQ1AfYw)
+- 🎥 [Streaming sur AWS Lambda - Actus JS de la semaine](https://www.youtube.com/watch?v=FPCka_vpiKs)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -192,8 +163,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
-- [Node.js 20 Now Available](https://openjsf.org/blog/2023/04/18/node-js-20-now-available/)
-- [Node v18.16.0](https://nodejs.org/en/blog/release/v18.16.0)
+- [Node.js 20 Now Available](https://openjsf.org/blog/2023/04/18/node-js-20-now-available/): avec test runner stable, permission model, possibilité de compiler un executable...
 - [WebGPU Fundamentals](https://webgpufundamentals.org/)
 - [pretty-ts-errors](https://github.com/yoavbls/pretty-ts-errors)
 - [total-typescript/shoehorn - Partial mocks in TypeScript](https://github.com/total-typescript/shoehorn)
@@ -204,12 +174,6 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/fireship_dev/status/1647239204303409157
-
-https://twitter.com/thekitze/status/1646511070801203202
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/142/meme.jpg)](https://twitter.com/thekitze/status/1646511070801203202)
 
 A plus 👋
