--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
@@ -62,7 +62,7 @@ Il y a de bonnes raisons d'adopter TypeScript 5.1+ au plus vite. Cela débloque 
 
 **[Breaking React Query's API on purpose](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)**
 
-React-Query va retirer les callbacks (`onSucces`, `onErro`, `onSettled`) du hook `useQuery` avec la v5. Dominik explique ce choix en proposant des alternatives plus adaptées pour les cas communs, comme afficher un toast. Une décision qui fait polémique, mais semble nécessaire car ces APIs étaient souvent mal utilisées. Note: les callbacks sont conservées pour `useMutation`.
+React-Query va retirer les callbacks (`onSuccess`, `onError`, `onSettled`) du hook `useQuery` avec la v5. Dominik explique ce choix en proposant des alternatives plus adaptées pour les cas communs, comme afficher un toast. Une décision qui fait polémique, mais semble nécessaire car ces APIs étaient souvent mal utilisées. Note: les callbacks sont conservées pour `useMutation`.
 
 ---
 
