--- a/website/newsletter/142/index.mdx
+++ b/website/newsletter/142/index.mdx
@@ -62,7 +62,7 @@ There are good reasons to adopt TypeScript 5.1+ as soon as possible. It unlocks 
 
 **[Breaking React Query's API on purpose](https://tkdodo.eu/blog/breaking-react-querys-api-on-purpose)**
 
-React-Query will remove the callbacks (`onSucces`, `onErro`, `onSettled`) from the `useQuery` hook with v5. Dominik explains this choice and suggest alternatives more adapted to common cases, like displaying a toast. A controversial but necessary decision because these APIs were often misused. Note: callbacks are kept for `useMutation`.
+React-Query will remove the callbacks (`onSuccess`, `onError`, `onSettled`) from the `useQuery` hook with v5. Dominik explains this choice and suggest alternatives more adapted to common cases, like displaying a toast. A controversial but necessary decision because these APIs were often misused. Note: callbacks are kept for `useMutation`.
 
 ---
 
